# oaim-sandbox

./: .gitignore  Dockerfile  HOL_GUIDE.md  README.md  client.sh  pytest.ini  requirements.txt  sandbox.sh  server.sh  test.sh
.github/ISSUE_TEMPLATE/: config.yml  model_api.md  model_api.yml
.github/workflows/: documentation.yml  pytest.yml
app/: .dockerignore  Dockerfile  entrypoint.sh  oaim_sandbox.py  oaim_server.py  requirements.txt  test.py
app/.streamlit/: config.toml
app/common/: functions.py  help_text.py  logging_config.py  schema.py
app/sandbox/: Dockerfile  requirements.txt
app/server/: .dockerignore  Dockerfile  database.py  databases.py  embedding.py  endpoints.py  models.py  oci.py  requirements.txt  settings.py  test_freamework.py  testbed.py
app/src/: .gitignore  oaim-sandbox.py  sandbox.py
app/tests/: README.md
docs/: .gitignore  README.md  hugo.toml
docs-source/: hugo.toml
docs-source/content/: _index.md
helm/: .helmignore  Chart.yaml  README.md  server-service.yaml  values.yaml  values_summary.md
hol/: HOL_GUIDE.md  INSTALL_DB23AI.md  SPLIT-EMBED.md
opentofu/: .gitignore  README.md  adb.tf  data.tf  kubernetes.tf  locals.tf  main.tf  module-network.tf  nsg.tf  nsg_rules.tf  output.tf  provider.tf  schema.yaml  variables.tf
spring_ai/: README.md  pom.xml
src/: .dockerignore  Dockerfile  ai_explorer_client.py  ai_explorer_server.py  conftest.py  entrypoint.sh  launch_client.py  launch_server.py  oai_client.py  oai_server.py  oaim_sandbox.py  oaim_server.py  pyproject.toml  pytest.ini  requirements.txt
src/.streamlit/: config.toml
src/client/: Dockerfile
src/client/content/: api_server.py  chatbot.py  server.py  testbed.py
src/client/content/config/: databases.py  models.py  oci.py  settings.py
src/client/content/tools/: prompt_eng.py  split_embed.py
src/client/spring_ai/: README.md  pom.xml
src/client/spring_ai/src/main/java/org/springframework/ai/openai/samples/helloworld/: AIController.java  Application.java  Config.java
src/client/spring_ai/src/main/resources/: application-dev.yml
src/client/spring_ai/templates/: obaas.yaml  start.sh
src/client/utils/: api_call.py  client.py  st_common.py
src/common/: functions.py  help_text.py  logging_config.py  schema.py
src/sandbox/: Dockerfile  requirements.txt
src/sandbox/content/: chatbot.py  server.py  testbed.py
src/sandbox/content/config/: database.py  databases.py  models.py  oci.py  settings.py
src/sandbox/content/tools/: prompt_eng.py  split_embed.py
src/sandbox/spring_ai/: ollama-values.yaml  pom.xml
src/sandbox/spring_ai/src/main/java/org/springframework/ai/openai/samples/helloworld/: AIController.java  Application.java  Config.java
src/sandbox/spring_ai/templates/: env.sh
src/sandbox/tests/: conftest.py
src/sandbox/tests/config/: test_client_databases.py  test_databases.py
src/sandbox/tests/tools/: test_client_prompt_eng.py
src/sandbox/utils/: api_call.py  client.py  st_common.py
src/server/: Dockerfile  endpoints.py  requirements.txt
src/server/agents/: chatbot.py
src/server/agents/tools/: oraclevs_retriever.py
src/server/bootstrap/: __init__.py  database_def.py  model_def.py  oci_def.py  prompt_eng_def.py  settings_def.py
src/server/tests/: conftest.py  test_kubernetes.py  test_server_databases.py  test_server_models.py  test_server_prompt_eng.py
src/server/utils/: databases.py  embedding.py  models.py  oci.py  settings.py  testbed.py
tests/: README.md  conftest.py  pytest.ini  requirements.txt  test.py
widget/: app.js  index.html  style.css
(+250 files in other folders)
