[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-explorer"
version = "0.1.0"
description = "Oracle AI Explorer for Apps"
requires-python = ">=3.11"
license =  "UPL-1.0"
authors = [
    {name = "Oracle", email = "obaas_ww@oracle.com"}
]

# Common dependencies that are always needed
dependencies = [
    "langchain-core==0.3.49",
    "httpx==0.28.1",
    "oracledb~=3.0",
]

[project.optional-dependencies]
# Server component dependencies
# torch is installed via requirements for platform specifics
server = [
    "bokeh==3.7.2",
    "evaluate==0.4.3",
    "fastapi==0.115.12",
    "faiss-cpu==1.10.0",
    "giskard==2.16.2",
    "IPython==9.0.2",
    "langchain-cohere==0.4.3",
    "langchain-community==0.3.20",
    "langchain-huggingface==0.1.2",
    "langchain-ollama==0.3.0",
    "langchain-openai==0.3.11",
    "langgraph==0.3.21",
    "litellm==1.65.0",
    "llama_index==0.12.26",
    "lxml==5.3.1",
    "matplotlib==3.10.1",
    "oci~=2.0",
    "plotly==6.0.1",
    "psutil==7.0.0",
    "python-multipart==0.0.20",
    "umap-learn==0.5.7",
    "uvicorn==0.34.0",
]

# GUI component dependencies
client = [
    "streamlit==1.44.0",
]

# Test dependencies
test = [
    "pytest",
    "pytest-asyncio",
    "docker",
]

# All-in-one installation (server + client)
all = [
    "ai-explorer[server]",
    "ai-explorer[client]",
]

# All-in-one with tests
all-test = [
    "ai-explorer[server]",
    "ai-explorer[client]",
    "ai-explorer[test]",
]

[tool.setuptools]
packages = ["server", "client", "common"]